css/home_page.css
body {
    margin: 0;
    padding : 0;
    background-color: #099;
}

/*Navigation Bar Settings*/

ul#navbar {
    font-family : sans-serif;
    /*text-align: center;*/
    background-color: black;
    width: 100%;
    position: fixed;
    top : 0;
    padding : 0;
    margin : 0;
    list-style-type: none;
    overflow: hidden;
    /*box-shadow: 0 2px 2px 0 rgba(0,0,0,0.5);*/
    /*border: solid 4px #009999;*/ 
}

ul#navbar li {
    float : left;
}


ul#navbar li a{
    display: block;
    padding : 10px 10px;
    color: #ffffff;
    text-align: center;
}

ul#navbar li:nth-child(5){
    float: right;
}


ul#navbar li a:hover{
    background-color: aqua;
    color: black;
}

ul#navbar a:hover{
    cursor: pointer;
    text-decoration: none;
    color: antiquewhite;
}

ul#navbar a:active{
    color:aqua;
}
/*Image Settings And Self Information Settings */

div.self-info{
    height : auto;
    border-radius: 8px;
    margin : 0 auto;
    background-color: white;
}

div.self-info ul{
    padding: 0 20px 0 0;
    margin : 7px 0 0 -13px;
    list-style-type: none;
}

div.self-info ul li{
    font-family : Georgia,sans-serif;
    line-height: 23px;
    font-weight: bold;
    color: #033;
}

div.profile-image{
    width : 180px;
    height: 200px;
    background-color: aqua;
    border-top-left-radius: 8px;
    border-bottom-left-radius: 8px;
    clip-path : polygon(0% 0%, 100% 0%, 71% 100%, 0% 100%);
    padding: 30px 20px;
    display: inline-block;
}

img.profile-image{
    border-radius : 50%;
}

div.self-definition{
    width: 800px;
    padding : 0 20px 0 0;
    display: inline;
    float : right;
}


div#content-body{
    margin: 69px auto 0;
    width : 1040px;
}

/*Contact Me Settings*/

div.contact-me p, div.contact-me form label{
    color: darkslategrey;
    font-family: Georgia, sans-serif;
}

div.contact-me p{ font-size : 1.5em; }

div.contact-me label{
    padding : 10px 10px 10px 0;
    display: inline-block;
    width : 100px;
    height : auto;
    font-weight: bolder;
}

div.contact-me input, div.contact-me textarea{
    background-color: #004c4c;
    border-style: none;
    padding : 10px;
    margin : 5px 0;
}

div.contact-me textarea {
    display: inline-block;
}

div.contact-me [type="submit"]{ font-weight: bold;}

div.contact-me [type="submit"]:hover{
    background-color : aqua;
    cursor: pointer;
}

div.contact-me{
    margin : 0 auto;
    width: 1050px;
    padding : 30px 0 0 0;
}

div.contact-me-background{
    background-color : black;
    margin: 20px 0 0 0 ;
    width: 100%;
    padding : 3% 0;
}


h2{
    font-family: Georgia, sans-serif;
    font-size: 2.5em;
    color : #009999;
    font-weight: 100;
}

strong{
    color: #009999;
}

em{
    color: #006666;
}

